fixed text alignment for footer on safari

--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -12,6 +12,11 @@ body{
 	text-align: center;
 }
 
+.owner-text{
+	font-family: sans-serif;
+	font-size: 12px;
+}
+
 #footer{
 	position: fixed;
 	bottom: 0px;
